[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
authors = ["Garen Tyler <garentyler@garen.dev>"]
repository = "https://github.com/garentyler/inferno"
readme = "README.md"
license = "GPL"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.71"
apecs = "0.7.0"
async-trait = "0.1.68"
byteorder = "1.4.3"
inferno-server.path = "./crates/inferno-server"
inferno-protocol.path = "./crates/inferno-protocol"
serde = { version = "1.0.160", features = ["serde_derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.28.0", features = ["full"] }
tracing = { version = "0.1.37", features = ["log"] }

