[package]
name = "inferno"
description = "A decentralized alternative to Discord"
version = "0.1.0"
authors = ["Garen Tyler <garentyler@garen.dev>"]
repository = "https://github.com/garentyler/inferno"
readme = "README.md"
license = "AGPL-3.0"
edition = "2021"

[[bin]]
name = "inferno"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.71"
apecs = "0.8.4"
async-trait = "0.1.68"
byteorder = "1.4.3"
clap = { version = "4.2.7", features = ["derive"] }
once_cell = "1.17.1"
serde = { version = "1.0.160", features = ["serde_derive"] }
serde_json = "1.0.96"
thiserror = "2.0.3"
tokio = { version = "1.28.0", features = ["full"] }
toml = "0.8.19"
tracing = { version = "0.1.37", features = ["log"] }
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17", features = ["tracing-log"] }
typeshare = "1.0.4"
