[package]
name = "inferno-protocol"
description = "The Inferno protocol implemented in a network-agnostic way"
build = "build.rs"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
thiserror.workspace = true

