[package]
name = "inferno-server"
description = "A decentralized alternative to Discord"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "inferno-server"
path = "src/main.rs"

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
inferno-protocol.workspace = true
once_cell = "1.17.1"
serde.workspace = true
thiserror.workspace = true
toml = "0.7.3"
tracing.workspace = true
tracing-subscriber = { version = "0.3.17", features = ["tracing-log"] }
tracing-appender = "0.2.2"
